--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,7 @@
   "description": "Creating an API for a CRUD MERN",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node-dev src/index.ts"
   },
