--- a/API/package.json
+++ b/API/package.json
@@ -10,7 +10,13 @@
   },
   "author": "diegodevs <diegom.develops@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.4",
+    "morgan": "^1.10.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
@@ -18,12 +24,5 @@
     "@types/node": "^17.0.7",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "mongoose": "^6.1.4",
-    "morgan": "^1.10.0"
   }
 }
