--- a/API/package.json
+++ b/API/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "npm run tsc",
     "dev": "ts-node-dev src/index.ts"
   },
   "author": "diegodevs <diegom.develops@gmail.com>",
