--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,8 +24,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "npm react-scripts start",
-    "build": "npm react-scripts build",
+    "start": "npm run react-scripts start",
+    "build": "npm run react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "serve -s build"
