--- a/API/package.json
+++ b/API/package.json
@@ -4,8 +4,8 @@
   "description": "Creating an API for a CRUD MERN",
   "main": "src/index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "npm run tsc",
+    "start": "npm run build && node dist/index.js",
+    "build": "tsc",
     "dev": "ts-node-dev src/index.ts"
   },
   "author": "diegodevs <diegom.develops@gmail.com>",
@@ -24,5 +24,8 @@
     "@types/node": "^17.0.7",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
