--- a/my-app/package.json
+++ b/my-app/package.json
@@ -24,8 +24,9 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "npm run react-scripts start",
-    "build": "npm run react-scripts build",
+    "start": "npm run build && npm run serve",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "serve -s build"
